# Ransac-3D

./: .gitignore  CMakeLists.txt  README.md
src/: kdtree.cpp  kdtree.h  main.cpp  obj.cpp  obj.h  ransac.cpp  ransac.h
